--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,3 +1,18 @@
-.header {
-    color: red;
+.home-header {
+  color: #333;
+  font-size: 2.5em;
+  margin-bottom: 20px;
+  max-width: 600px;
+  margin-left: auto;
+  margin-right: auto;
 }
+
+.description {
+  color: #666;
+  font-size: 1.2em;
+  margin-bottom: 30px;
+  max-width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
